updated the regex

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                 </div>
                                 <input type="text"
                                         id="first-name"
-                                        pattern="^[A-Za-z]$"
+                                        pattern="^[a-zA-Z\s]*$"
                                         placeholder="Jale.."
                                         maxlength="20"
                                         required>
@@ -81,7 +81,7 @@
                                 <input type="text"
                                         id="last-name"
                                         placeholder="bektas"
-                                        pattern="^[A-Za-z]$"
+                                        pattern="^[a-zA-Z\s]*$"
                                         maxlength="30"
                                         required>
                             </div>
